Fix EOS reached before decoder fallback

If the demuxer stream we are pulling buffers from only has a few frames
(1 to 3 for example), we can reach the demuxer's end of stream before
knowing that we need to fall back to a software decoder. DecoderStream
is left with the |decoding_eos_| flag set, and runs into a DCHECK when
calling ReadFromDemuxerStream() upon decoder reinitialization.

This change updates CanDecodeMore() to take into account
|fallback_buffers_|, so we can attempt to decode fallback buffers before
returning EOS frames.

BUG=606084
REVIEW=DaleCurtis
TEST=updated unit tests

Review URL: https://codereview.chromium.org/1918693003

Cr-Commit-Position: refs/heads/master@{#389687}

Former-commit-id: 8f4a3f7d9d522797568b75ab201ed9aa9506afb6