media/base/fake_demuxer_stream.h
@@ -63,6 +63,9 @@ class FakeDemuxerStream : public DemuxerStream {
   // the stream.
   void SeekToStart();
 
+  // Sets further read requests to return EOS buffers.
+  void SeekToEndOfStream();
+
   // Sets the splice timestamp for all furture buffers returned via Read().
   void set_splice_timestamp(base::TimeDelta splice_timestamp) {
     splice_timestamp_ = splice_timestamp;
